Fix padding and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ html {
   color: #fff;
   background-size: 64px;
   border: 3px solid #2d5a4d;
+  border-left: 0;
+  border-right: 0;
 }
 
 .logo {
@@ -32,7 +34,7 @@ html {
   background-color: #fff;
   background-repeat: no-repeat;
   color: #2d5a4d;
-  background-size: 55%;
+  background-size: 60%;
   background-position: top right;
 }
 
@@ -45,15 +47,15 @@ html {
   background-size: cover;
   background-position: bottom center;
   border-bottom: 3px solid #145b1d;
-  padding: 160px;
+  padding-top: 180px;
 }
 
 .banner-content {
   background-image: url("../images/two-leaves.svg");
   background-repeat: no-repeat;
   background-size: 100px;
-  padding-top: 140px;
-  padding-left: 1em;
+  padding-top: 120px;
+  padding-left: .75em;
 }
 
 @media only screen and (min-width: 60em) {
